--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
   memory: 512M
   instances: 1
   domain: mybluemix.net
-  name: linebotgoman
-  host: linebotgoman
+  name: LineBotGoman
+  host: LineBotGoman
   disk_quota: 1024M
